--- a/docroot/themes/custom/themekit/partials/component/image-slider/paragraph--image-slider--default.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/image-slider/paragraph--image-slider--default.html.twig
@@ -16,14 +16,16 @@
           {% endfor %}
         </ul>
       </div>
-      <div class="glide__arrows" data-glide-el="controls">
-        <button class="glide__arrow glide__arrow--left" data-glide-dir="<" aria-label="Prev"></button>
-        <button class="glide__arrow glide__arrow--right" data-glide-dir=">" aria-label="Next"></button>
-      </div>
-      <div class="glide__bullets" data-glide-el="controls[nav]">
-        {% for key, slide in content.field_medias if key|first != '#' %}
-          <button class="glide__bullet" data-glide-dir="={{ key }}"></button>
-        {% endfor %}
+      <div class="wrapper-control">
+        <div class="glide__arrows" data-glide-el="controls">
+          <button class="glide__arrow glide__arrow--left" data-glide-dir="<" aria-label="Prev"></button>
+          <button class="glide__arrow glide__arrow--right" data-glide-dir=">" aria-label="Next"></button>
+        </div>
+        <div class="glide__bullets" data-glide-el="controls[nav]">
+          {% for key, slide in content.field_medias if key|first != '#' %}
+            <button class="glide__bullet" data-glide-dir="={{ key }}"></button>
+          {% endfor %}
+        </div>
       </div>
     </div>
   </div>
