--- a/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/case/full/node--case--full.html.twig
@@ -7,12 +7,15 @@
     'field_logo',
     'field_components',
     'field_link',
-    'field_reference'
+    'field_reference',
+    'field_component_item'
   )
   %}
 
+  <a class="link--back desktop" href="{{ path('entity.node.canonical', {'node': 3}) }}" >{{ 'Cases'|t }}</a>
   <div class="field-banner">
     <div class="field-text">
+      <a class="link--back mobile" href="{{ path('entity.node.canonical', {'node': 3}) }}" >{{ 'Cases'|t }}</a>
       <h1 class="heading">{{ node.label }}</h1>
       <div class="field-category">
         {{ node.field_category.entity.label }}
@@ -22,12 +25,21 @@
     {{ content.field_image }}
   </div>
 
+
   <div{{ content_attributes.addClass('node__content') }}>
     <div class="field-content">
       {{ rendered_content }}
+      <div class="field-item-info mobile">
+        {{ content.field_logo }}
+        <h4 class="heading">{{ node.label }}</h4>
+        {% if node.field_link.uri %}
+          <a class="link--external" target="_blank" href="{{ node.field_link.uri }}"> {{ 'Bekijk website'|t }}</a>
+        {% endif %}
+      </div>
+      {{ content.field_component_item }}
     </div>
     <div class="field-info">
-      <div class="field-item">
+      <div class="field-item-info desktop">
         {{ content.field_logo }}
         <h4 class="heading">{{ node.label }}</h4>
         {% if node.field_link.uri %}
@@ -36,14 +48,14 @@
       </div>
 
       {% if node.field_components.entity.field_p_items %}
-        <div class="field-item">
+        <div class="field-item-info">
           <h4 class="heading">{{ 'Technische details'|t }}</h4>
           {{ content.field_components }}
         </div>
       {% endif %}
 
       {% if content.field_reference.0 %}
-        <div class="field-item">
+        <div class="field-item-info">
           {{ content.field_reference }}
         </div>
       {% endif %}
