Move Highlighted region to top of the page

--- a/docroot/themes/custom/themekit/global/sass/components/_tabs.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_tabs.scss
@@ -5,8 +5,8 @@
 ul.tabs {
   @include content-width(default);
   position: relative;
-  padding: 2rem 0;
+  padding-bottom: 0;
   z-index: z(above);
+  font-size: rem-calc(14);
+  margin-bottom: 0;
 }
-
-
