--- a/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_custom-blocks.scss
@@ -1,6 +1,6 @@
 // Styles for the general custom blocks
 
 // Overflow body (for the opened menu/popup/etc.)
-body.is-overflow {
-  overflow: hidden;
+body {
+  overflow-x: hidden;
 }
