--- a/docroot/themes/custom/themekit/partials/layout/twocol/twocol-layout.html.twig
+++ b/docroot/themes/custom/themekit/partials/layout/twocol/twocol-layout.html.twig
@@ -15,6 +15,7 @@
   'layout',
   'twocol-layout',
   'section-padding--' ~ settings.padding,
+  'section-valign--' ~ settings.valign,
 ] %}
 
 {{ attach_library('themekit/layout') }}
