--- a/docroot/modules/custom/dnl_layouts/templates/twocol-layout.html.twig
+++ b/docroot/modules/custom/dnl_layouts/templates/twocol-layout.html.twig
@@ -13,6 +13,7 @@
 
 {% set classes = [
   'section-padding--' ~ settings.padding,
+  'section-valign--' ~ settings.valign,
 ] %}
 {% if content %}
   <div{{ attributes.addClass(classes) }}>
