Update logic to set logo style based on the home banner settings

--- a/docroot/themes/custom/themekit/global/sass/components/_drupal.scss
+++ b/docroot/themes/custom/themekit/global/sass/components/_drupal.scss
@@ -440,3 +440,9 @@ ul.layout-selection {
   05 - Site Specific
   Improvements that are specific to this site
 \*------------------------------------*/
+
+.region-highlighted {
+  background: $body-background;
+  position: relative;
+  z-index: z(above);
+}
