COD-11 - Init UI for text-with-media block

--- a/docroot/themes/custom/themekit/partials/component/text-with-media/block--inline-block--text-with-media.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/text-with-media/block--inline-block--text-with-media.html.twig
@@ -2,9 +2,7 @@
 
 {% set block = content['#block_content'] %}
 {% set classes = [
-  block.field_enable_background.value == 0 or block.field_enable_background.value == 1 ? 'shape-background',
-  block.field_enable_background.value == 1 ? 'shape-background--default',
-  block.field_enable_background.value == 0 ? 'shape-background--inverse',
+  block.field_media_position.value ? 'media-position--' ~ block.field_media_position.value,
 ] %}
 {% set attributes = attributes.addClass(classes) %}
 
