COD-6 - Adjust rendered_array for copyright_text

--- a/docroot/themes/custom/themekit/partials/region/footer-bottom/region--footer-bottom.html.twig
+++ b/docroot/themes/custom/themekit/partials/region/footer-bottom/region--footer-bottom.html.twig
@@ -2,8 +2,8 @@
 
 {% set formatted_text = {
   '#type':   'processed_text',
-  '#text':    site_settings.footer.footer_copyright.field_text.value,
-  '#format':  site_settings.footer.footer_copyright.field_text.format,
+  '#text':    site_settings.footer.footer_copyright.value,
+  '#format':  site_settings.footer.footer_copyright.format,
 } %}
 
 {% block region %}
