--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -72,6 +72,7 @@
 $global-font-size: 100%;
 $global-width: rem-calc(1344);
 $global-width-narrow: 900px;
+$global-width-middle: 752px;
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #1779ba,
