--- a/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/_custom-styles.scss
@@ -14,6 +14,9 @@
 
   .link--back {
     margin-bottom: 28px;
+    &:after {
+      transition: left 0.3s ease-in-out;
+    }
   }
 
   .node__title {
@@ -94,6 +97,64 @@
     }
   }
 
+  .field-contact {
+    > .field {
+      margin-bottom: 12px;
+      &:last-child {
+        margin-bottom: 20px;
+      }
+    }
+
+    a {
+      color: $color-gray-900;
+      display: inline-block;
+      padding-left: 36px;
+      position: relative;
+      &:before {
+        color: $color-gray-500;
+        position: absolute;
+        left: 0;
+        top: 3px;
+        font-size: rem-calc(24);
+      }
+    }
+
+    .field--name-field-email {
+      a {
+        @include icon-before(mail);
+      }
+    }
+
+    .field--name-field-phone {
+      a {
+        @include icon-before(phone);
+      }
+    }
+
+    .field--name-field-address {
+      a {
+        @include icon-before(location);
+      }
+      .country {
+        display: none;
+      }
+      .address {
+        margin: 0;
+        br {
+          display: none;
+        }
+      }
+    }
+
+    a[href*="facebook"] {
+      @include icon-before(facebook);
+    }
+
+    a[href*="linkedin"] {
+      @include icon-before(linkedin);
+    }
+  }
+
   > .node__content {
     display: flex;
     flex-wrap: wrap;
@@ -110,14 +171,29 @@
     }
 
     > .field-info {
+      max-width: 100%;
       width: 304px;
-
-      @include breakpoint(medium down) {
-        margin-top: 32px;
-      }
+      font-size: rem-calc(16);
 
       h4.heading {
         margin-bottom: 20px;
+      }
+
+      .field--name-field-category {
+        @include font-sizes(kicker-small);
+
+        color: $color-gray-500;
+        margin-bottom: 16px;
+      }
+
+      .field--name-field-links {
+        > .field__item {
+          margin-bottom: 12px;
+        }
+      }
+
+      @include breakpoint(medium down) {
+        margin-top: 32px;
       }
     }
 
@@ -128,6 +204,17 @@
 
       &.mobile {
         margin-top: 32px;
+      }
+
+      &.field-awards {
+        .field {
+          display: flex;
+          align-items: center;
+        }
+        .field--type-integer {
+          font-weight: $global-weight-bold;
+          margin: 0 12px;
+        }
       }
 
       .field--name-field-logo {
@@ -151,6 +238,7 @@
       display: none;
     }
   }
+
   .desktop {
     @include breakpoint(small down) {
       display: none;
