add styles and template for category feature, add styles for category taxonomy page, add styles and template for simple teaser case, update config

--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -73,6 +73,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1344);
 $global-width-narrow: 900px;
 $global-width-middle: 752px;
+$global-width-small: 668px;
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #1779ba,
