--- a/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/partner/full/node--partner--full.html.twig
@@ -16,10 +16,10 @@
   )
   %}
 
-  <a class="link--back desktop" href="/cases" >{{ 'Partners'|t }}</a>
+  <a class="link--back desktop" href="/partners" >{{ 'Partners'|t }}</a>
   <div class="field-banner">
     <div class="field-text">
-      <a class="link--back mobile" href="/cases" >{{ 'Partners'|t }}</a>
+      <a class="link--back mobile" href="/partners" >{{ 'Partners'|t }}</a>
       <h1 class="heading">{{ node.label }}</h1>
       <div class="field-category">
         {{ node.field_category.entity.label }} {{ 'Partner'|t }}
