--- a/docroot/themes/custom/themekit/partials/component/text/block--inline-block--text.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/text/block--inline-block--text.html.twig
@@ -2,9 +2,8 @@
 
 {% set block = content['#block_content'] %}
 {% set classes = [
-  block.field_enable_background.value == 0 or block.field_enable_background.value == 1 ? 'shape-background',
-  block.field_enable_background.value == 1 ? 'shape-background--default',
-  block.field_enable_background.value == 0 ? 'shape-background--inverse',
+  block.field_frame_background.value ? 'frame-background',
+  block.field_frame_background.value ? 'frame-background--' ~ block.field_frame_background.value|clean_class,
 ] %}
 {% set attributes = attributes.addClass(classes) %}
 
