--- a/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
+++ b/docroot/themes/custom/themekit/partials/component/basic-banner/block--basic-banner.scss
@@ -10,7 +10,9 @@
   }
 
   .content {
-    @include top-bottom(padding, 48px);
+    @include breakpoint(medium) {
+      @include top-bottom(padding, 48px);
+    }
     @include breakpoint(large) {
       @include flex-grid-size(5);
       @include top-bottom(padding, 100px);
