--- a/docroot/themes/custom/themekit/partials/component/community-features/block--community-features.scss
+++ b/docroot/themes/custom/themekit/partials/component/community-features/block--community-features.scss
@@ -1,118 +1,12 @@
 ////
-/// Text block
+/// Сommunity Features block
 ////
 
-.block--text {
-  .field--name-field-heading {
-    margin-bottom: rem-calc(8);
-    @include breakpoint(large) {
-      margin-bottom: rem-calc(24);
-    }
-  }
-
-  .field--name-field-p-link {
-    @include cta-list;
-    margin-top: rem-calc(12);
+.block--community-features {
+  > .paragraph:not(:last-child) {
+    margin-bottom: 24px;
     @include breakpoint(medium) {
-      margin-top: rem-calc(24);
-    }
-  }
-
-  // Default text block
-  &:not(.shape-background) {
-    @at-root .twocol-layout .layout__region--first & {
-      @include breakpoint(medium) {
-        padding-right: 10%;
-      }
-      @include breakpoint(large) {
-        padding-right: 20%;
-      }
-    }
-
-    @at-root .twocol-layout .layout__region--second & {
-      @include breakpoint(medium) {
-        padding-left: 10%;
-      }
-      @include breakpoint(large) {
-        padding-left: 20%;
-      }
-    }
-  }
-
-  // Enabled frame background
-  &.frame-background {
-    @include top-bottom(padding, 74px);
-    position: relative;
-    min-height: 360px;
-    @include breakpoint(medium) {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      min-height: 560px;
-    }
-
-    &::before {
-      top: 0;
-      min-height: 100%;
-      @include breakpoint(large) {
-        @include top-bottom(margin, rem-calc(26));
-      }
-
-      @at-root .onecol-layout & {
-        min-width: 150vw;
-        transform: translate3d(-33vw, 0, 0);
-        @include breakpoint(medium) {
-          min-width: 125%;
-          transform: translate3d(-15%, 0, 0);
-        }
-      }
-
-      @at-root .twocol-layout & {
-        @include breakpoint(medium down) {
-          right: auto;
-          left: 0;
-          min-width: 125%;
-          transform: translate3d(-15%, 0, 0);
-        }
-        @include breakpoint(small down) {
-          min-width: 150vw;
-          transform: translate3d(-33vw, 0, 0);
-        }
-      }
-    }
-
-    &--default {
-      @include brand-shape(text) {
-        right: 0;
-        @at-root .onecol-layout .layout__region & {
-          right: auto;
-          left: 0;
-        }
-      }
-    }
-
-    &--rotated {
-      @include brand-shape(text-inverse) {
-        left: 0;
-      }
-    }
-
-    @at-root .twocol-layout .layout__region--first & {
-      @include breakpoint(medium) {
-        padding-right: rem-calc(64);
-      }
-      @include breakpoint(large) {
-        padding-right: rem-calc(112);
-      }
-    }
-
-    @at-root .twocol-layout .layout__region--second & {
-      @include breakpoint(medium) {
-        padding-left: rem-calc(64);
-      }
-      @include breakpoint(large) {
-        padding-left: rem-calc(112);
-      }
+      margin-top: 32px;
     }
   }
 }
